# backend/admin/internal/services/orm/models/sys_user.go
@@ -1,8 +1,6 @@
 package models
 
 import (
-	"time"
-
 	"orm-crud/gormc/mixin"
 
 	"gorm.io/plugin/soft_delete"
@@ -23,8 +21,6 @@ type SysUser struct {
 	Username     string                `gorm:"column:username;type:varchar(64);not null;uniqueIndex:idx_sys_user_username_active,where:deleted_at = 0;comment:用户名" json:"username"`
 	Nickname     string                `gorm:"column:nickname;type:varchar(64);not null;default:'';comment:昵称" json:"nickname"`
 	Password     string                `gorm:"column:password;type:varchar(255);not null;default:'';comment:密码" json:"-"`
-	LastLoginAt  *time.Time            `gorm:"column:last_login_at;comment:最后一次登录的时间" json:"lastLoginAt"`
-	LastLoginIP  string                `gorm:"column:last_login_ip;type:varchar(45);not null;default:'';comment:最后一次登录的IP" json:"lastLoginIP"`
 	SysRoles     []SysRole             `gorm:"many2many:sys_user_role;foreignKey:ID;joinForeignKey:UserID;References:ID;joinReferences:RoleID" json:"sysRoles"`
 	LanguageCode string                `gorm:"column:language_code;type:varchar(32);not null;default:'';comment:语言代码" json:"languageCode"`
 }
